--- a/src/index.css
+++ b/src/index.css
@@ -118,6 +118,32 @@ header .cart span {
     width: 100%;
 }
 
+/*------------Login------------*/
+.login {
+    font-size: 1.3rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    color: white;
+    background-color: #08a05c;
+    border-radius: 0.5em;
+    padding: 0.2%;
+
+}
+
+/*------------Datos usuario------------*/
+.usuario {
+    font-size: 1rem;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+
+}
+
+/*------------Imagen Usuario------------*/
+.imagen {
+    width: 5%;
+    border-radius: 4em;
+}
+
 
 /*------------Productos------------*/
 .title {
@@ -348,6 +374,7 @@ header .cart span {
     background-color: #08a05c;
 
 }
+
 .carrito__footer .btnDel {
     display: inline-block;
     padding: .3rem 1rem;
@@ -357,6 +384,7 @@ header .cart span {
 
 
 }
+
 .carrito__footer .btn:hover {
     background-color: #08a05c;
     color: white;
@@ -406,26 +434,28 @@ header .cart span {
     grid-template-columns: 1fr 1fr;
     gap: 2rem 1rem;
     max-width: 250px;
-      
+
 }
 
-.detalles .grid  .nuevo  {
+.detalles .grid .nuevo {
     padding: 1rem 2rem;
     border-radius: 8px;
     font-size: 1.5rem;
     font-weight: 400;
     color: white;
 }
-.detalles .grid  .size  {
+
+.detalles .grid .size {
     padding: 1rem 2rem;
     border-radius: 8px;
     font-size: 1.5rem;
     font-weight: 400;
     color: white;
 }
+
 .detalles .grid .nuevo {
     background-color: #08a05c;
-    
+
 }
 
 .detalles .grid .size {
@@ -471,9 +501,9 @@ header .cart span {
     color: #30333a;
 }
 
-.relacionado{
+.relacionado {
     text-align: center;
-    background: #5f5d5d ;
+    background: #5f5d5d;
     color: white;
     max-width: 100%;
     width: 100%;
@@ -486,55 +516,58 @@ header .cart span {
 
 /*---------Agregado para el footer------*/
 
-#bg{
+#bg {
     background-color: #08a05c;
- }
-     
- #in{
+}
+
+#in {
     color: rgba(234, 13, 234, 0.657);
     font-size: 40px;
- }
-     
- #fb{
+}
+
+#fb {
     color: #150D9F;
     font-size: 40px;
- }
-     
- #tw{
+}
+
+#tw {
     color: deepskyblue;
     font-size: 40px;
- }
-     
- #wa{
+}
+
+#wa {
     color: green;
     font-size: 40px;
- }
- .abaut{
+}
+
+.abaut {
     border-radius: 100%;
- }
- 
- #git{
+}
+
+#git {
     color: black;
     font-size: 30px;
- }
+}
 
- #lin{
+#lin {
     color: mediumblue;
     font-size: 30px;
- }
+}
 
- #hover :hover{
+#hover :hover {
     font-weight: bold;
     cursor: pointer;
- }
- /*---------Agregado para el footer------*/
- 
+}
+
+/*---------Agregado para el footer------*/
+
 /*----------MEDIA -----------------*/
 @media only screen and (max-width: 1000px) {
     .carrito__item {
         width: 92%;
-        
+
     }
+
     .detalles {
         width: 92%;
     }
