--- a/src/index.css
+++ b/src/index.css
@@ -120,13 +120,15 @@ header .cart span {
 
 /*------------Login------------*/
 .login {
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     color: white;
     background-color: #08a05c;
     border-radius: 0.5em;
-    padding: 0.2%;
+    padding: 0.1%;
+    margin-bottom: 0.5%;
+    margin-top: 0.5%;
 
 }
 
@@ -142,6 +144,8 @@ header .cart span {
 .imagen {
     width: 5%;
     border-radius: 4em;
+    border-style: solid; color: #08a05c;
+    margin-top: 0.3%;
 }
 
 
