--- a/src/index.css
+++ b/src/index.css
@@ -137,6 +137,8 @@ header .cart span {
     font-size: 1rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
+    margin-top: 0.2%;
+    margin-bottom: -0.1%;
 
 }
 
@@ -144,8 +146,8 @@ header .cart span {
 .imagen {
     width: 5%;
     border-radius: 4em;
-    border-style: solid; color: #08a05c;
-    margin-top: 0.3%;
+    border-style: solid; color: black;
+    margin-top: 0.5%;
 }
 
 
