--- a/src/index.css
+++ b/src/index.css
@@ -78,8 +78,8 @@ header .cart {
 }
 
 header .cart box-icon {
-    width: 45px;
-    height: 45px;
+    width: 60px;
+    height: 25px;
 
 
 }
@@ -87,7 +87,7 @@ header .cart box-icon {
 header .cart span {
     position: absolute;
     top: -1rem;
-    right: -1.5rem;
+    right: -0.5rem;
     width: 2.5rem;
     height: 2.5rem;
 
@@ -597,11 +597,11 @@ header .cart span {
     font-size: 1.2rem;
 }
 
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
     header ul {
         display: none;
     }
-}
+} */
 
 @media only screen and (max-width: 450px) {
     .carrito__item h3 {
